<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ScrollView
		android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <LinearLayout 
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            
		    <TextView         
		        android:id="@+id/tv_about"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/about_text"
				android:gravity="center_horizontal"
		        android:textSize="20sp"
				android:textColor="@color/black"/>
		    
		    <TextView         
		        android:id="@+id/tv_email"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/about_email"
		        android:textSize="20sp"
		        android:autoLink="email"/>
		    
		    <TextView         
		        android:id="@+id/tv_copyright1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/about_copyright1"
		        android:textSize="20sp"
				android:textColor="@color/black"/>
		    
		    <TextView         
		        android:id="@+id/tv_copyright2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/about_copyright2"
		        android:textSize="20sp"
				android:textColor="@color/black"/>
		    
		    <Button
		        android:id="@+id/btn_rate_it"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
				android:layout_marginBottom="10dp"
			    android:background="@drawable/button_selector"
			    style="@style/ButtonStyle"
		        android:text="@string/rate_it"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>