<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_date_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:text="@string/date_from" />

    <Button
      	android:id="@+id/btn_date_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="23dp"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/tv_date_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/tv_date_from"
        android:textSize="18sp"
        android:text="@string/date_to" />

    <Button
      	android:id="@+id/btn_date_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="23dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_date_from"/>

	<LinearLayout
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_below="@id/tv_date_to"
        android:layout_marginTop="20dp"
       	android:orientation="horizontal">
   
		<Button
       		android:id="@+id/btn_cancel"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel"
	        android:layout_marginLeft="20dp"
	        android:layout_weight="1" />
	
		<Button
	        android:id="@+id/btn_ok"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:text="@string/ok"
	        android:layout_marginRight="20dp"
	        android:layout_weight="1" />

	</LinearLayout>

</RelativeLayout>