<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/coordinator_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/white">

		<RelativeLayout
			android:id="@+id/category_header_layout"
			android:layout_width="match_parent"
			android:layout_height="@dimen/bar_height"
			android:elevation="@dimen/header_elevation"
			android:background="@color/bar">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_marginLeft="10dp"
				android:textColor="@color/black"
				android:textSize="18sp"
				android:text="@string/category">
			</TextView>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_marginLeft="170dp"
				android:textColor="@color/black"
				android:textSize="18sp"
				android:text="@string/limit">
			</TextView>

		</RelativeLayout>

		<ListView
			android:id="@android:id/list"
			android:layout_marginTop="@dimen/bar_height"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"/>

		<TextView
			android:id="@+id/empty_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			android:text="@string/no_entries"
			android:textSize="38sp"
			android:textColor="@color/black"/>

	</RelativeLayout>

	<android.support.design.widget.FloatingActionButton
		android:id="@+id/fab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/fab_margin"
		android:layout_marginRight="@dimen/fab_margin"
		app:layout_anchorGravity="bottom|right|end"
		app:layout_anchor="@id/coordinator_layout"
		android:src="@drawable/ic_fab"
		app:elevation="@dimen/fab_elevation"
		app:borderWidth="0dp"
		app:fabSize="normal"
		app:backgroundTint="@color/pink"
		android:contentDescription="@string/add_category"/>

</android.support.design.widget.CoordinatorLayout>
