<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/bar_height"
		android:elevation="@dimen/header_elevation"
		android:background="@color/bar">
		
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	 		android:layout_centerVertical="true"
 			android:layout_marginLeft="10dp"
	        android:textColor="@color/black"
	        android:textSize="18sp"
	        android:text="@string/date">
	    </TextView>
			 	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	 		android:layout_centerVertical="true"
 			android:layout_marginLeft="130dp"
	        android:textColor="@color/black"
	        android:textSize="18sp"
	        android:text="@string/amount">
	    </TextView>

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	 		android:layout_centerVertical="true"
 			android:layout_marginLeft="250dp"
	        android:textColor="@color/black"
	        android:textSize="18sp"
	        android:text="@string/details">
	    </TextView>

	</RelativeLayout>
    
    <ListView
  		android:id="@android:id/list"
  		android:layout_width="match_parent"
  		android:layout_height="match_parent"
  		android:layout_marginTop="@dimen/bar_height"
        android:layout_marginBottom="@dimen/bar_height"
  		android:listSelector="@android:color/transparent">
	</ListView>

	<include layout="@layout/total_bar"/>

</RelativeLayout>